--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1 class="title">Etch-a-Sketch</h1>
+    <button class="createGrid">Create Grid</button>
+    <div class="container"></div>
 </body>
 </html>
