Add erase button to clear boxes background color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1 class="title">Etch-a-Sketch</h1>
-    <button class="createGrid">Create Grid</button>
+    <div class="cont">
+        <button class="createGrid">Create Grid</button>
+        <button class="clear">Clear</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
